--- a/QPlan/QPlan/Views/PaginaEstablecimientoDetalles.xaml
+++ b/QPlan/QPlan/Views/PaginaEstablecimientoDetalles.xaml
@@ -26,7 +26,7 @@
                         <RowDefinition Height="15"></RowDefinition>
                         <RowDefinition Height="15"></RowDefinition>
                         <RowDefinition Height="15"></RowDefinition>
-                        <RowDefinition Height="10"></RowDefinition>
+                        <RowDefinition Height="40"></RowDefinition>
                         <RowDefinition Height="20"></RowDefinition>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
@@ -50,7 +50,21 @@
                     <Label Text="{Binding EdadMinima}" Grid.Row="6" Grid.Column="1" Margin="100,0,0,0"></Label>
                     <Label Text="Precio entrada: " Grid.Row="7" Grid.Column="1"></Label>
                     <Label Text="{Binding PrecioEntrada}" Grid.Row="7" Grid.Column="1" Margin="100,0,0,0"></Label>
-                    <Grid x:Name="grdRedesSociales" Grid.Row="9" Grid.Column="1" HorizontalOptions="End"></Grid>
+                    <Grid x:Name="grdRedesSociales" Grid.Row="9" Grid.Column="1" HorizontalOptions="End" Margin="0,0,-20,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="30"></ColumnDefinition>
+                            <ColumnDefinition Width="30"></ColumnDefinition>
+                            <ColumnDefinition Width="30"></ColumnDefinition>
+                            <ColumnDefinition Width="30"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="30"></RowDefinition>
+                        </Grid.RowDefinitions>
+                        <ImageButton Source="logo_instagram.png" BackgroundColor="Transparent" Grid.Column="0" Grid.Row="0"></ImageButton>
+                        <ImageButton Source="logo_twitter.png" BackgroundColor="Transparent" Grid.Column="1" Grid.Row="0"></ImageButton>
+                        <ImageButton Source="logo_whatsapp.png" BackgroundColor="Transparent" Grid.Column="2" Grid.Row="0"></ImageButton>
+                        <ImageButton Source="logo_facebook.png" BackgroundColor="Transparent" Grid.Column="3" Grid.Row="0"></ImageButton>
+                    </Grid>
                 </Grid>
             </Grid>
         </RefreshView>
