--- a/QPlan/QPlan/Views/PaginaBusqueda.xaml
+++ b/QPlan/QPlan/Views/PaginaBusqueda.xaml
@@ -1,12 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="QPlan.Views.PaginaBusqueda">
+             x:Class="QPlan.Views.PaginaBusqueda"
+             Title="QPlan">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="10"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="10"></RowDefinition>
+                <RowDefinition Height="40"></RowDefinition>
+            </Grid.RowDefinitions>
+            <!--Grid para la barra de busqueda y el boton de buscar-->
+            <Grid Grid.Column="1" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="300"></ColumnDefinition>
+                    <ColumnDefinition Width="80"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Entry x:Name="entSearchBar" Placeholder="¿A donde te apetece ir?" PlaceholderColor="LightGray" Grid.Row="0" Grid.Column="0"></Entry>
+                <Button x:Name="btnBuscar" Text="Buscar" Grid.Row="0" Grid.Column="1" Clicked="btnBuscar_Clicked"></Button>
+            </Grid>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
