--- a/QPlan/QPlan/Views/PaginasBusqueda/PaginaEventosResultadosBusqueda.xaml
+++ b/QPlan/QPlan/Views/PaginasBusqueda/PaginaEventosResultadosBusqueda.xaml
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:QPlan.ViewModels"
-             xmlns:model="clr-namespace:QPlan.Models"
-             x:Class="QPlan.Views.PaginaEventos"
-             Title="QPlan">
-    <RefreshView x:DataType="local:EventosViewModel" Command="{Binding LoadEventosCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
+             x:Class="QPlan.Views.PaginasBusqueda.PaginaEventosResultadosBusqueda"
+             xmlns:local="clr-namespace:QPlan.ViewModels.PaginasBusqueda"
+             xmlns:model="clr-namespace:QPlan.Models">
+    <RefreshView x:DataType="local:EventosResultadosBusquedaViewModel" Command="{Binding LoadEventosCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="EventosListView" ItemsSource="{Binding Eventos}" SelectionMode="None" Margin="20,20,0,0" HorizontalOptions="Center">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
@@ -14,7 +13,7 @@
                             <RowDefinition Height="25"></RowDefinition>
                             <RowDefinition Height="22"></RowDefinition>
                             <RowDefinition Height="20"></RowDefinition>
-                            <RowDefinition Height="15"></RowDefinition> 
+                            <RowDefinition Height="15"></RowDefinition>
                             <RowDefinition Height="10"></RowDefinition>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
@@ -32,7 +31,7 @@
                         <Grid.GestureRecognizers>
                             <TapGestureRecognizer
                                 NumberOfTapsRequired="1"
-                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:EventosViewModel}}, Path=EventoTapped}"
+                                Command="{Binding Source={RelativeSource AncestorType={x:Type local:EventosResultadosBusquedaViewModel}}, Path=EventoTapped}"
                                 CommandParameter="{Binding .}">
                             </TapGestureRecognizer>
                         </Grid.GestureRecognizers>
