--- a/QPlan/QPlan/Views/PaginaEventos.xaml
+++ b/QPlan/QPlan/Views/PaginaEventos.xaml
@@ -5,6 +5,13 @@
              xmlns:model="clr-namespace:QPlan.Models"
              x:Class="QPlan.Views.PaginaEventos"
              Title="QPlan">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Filtrar"
+                     IconImageSource="icono_filtar_50px.png"
+                     Order="Primary"
+                     Priority="0"
+                     Command="{Binding OnFiltrarTapped}"></ToolbarItem>
+    </ContentPage.ToolbarItems>
     <RefreshView x:DataType="local:EventosViewModel" Command="{Binding LoadEventosCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="EventosListView" ItemsSource="{Binding Eventos}" SelectionMode="None" Margin="20,20,0,0" HorizontalOptions="Center">
             <CollectionView.ItemTemplate>
