--- a/QPlan/QPlan/Views/PaginasBusqueda/PaginaEstablecimientosResultadosBusqueda.xaml
+++ b/QPlan/QPlan/Views/PaginasBusqueda/PaginaEstablecimientosResultadosBusqueda.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QPlan.Views.PaginasBusqueda.PaginaEstablecimientosResultadosBusqueda"
              xmlns:local="clr-namespace:QPlan.ViewModels.PaginasBusqueda"
-             xmlns:model="clr-namespace:QPlan.Models">
+             xmlns:model="clr-namespace:QPlan.Models"
+             NavigationPage.HasNavigationBar="False">
     <ContentPage.Content>
         <RefreshView x:DataType="local:EstablecimientosResultadosBusquedaViewModel" Command="{Binding LoadEstablecimientosCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
             <CollectionView x:Name="EstablecimientosListView" ItemsSource="{Binding Establecimientos}" SelectionMode="None" Margin="20,20,0,0">
