--- a/QPlan/QPlan/Views/PaginasBusqueda/PaginaEventosResultadosBusqueda.xaml
+++ b/QPlan/QPlan/Views/PaginasBusqueda/PaginaEventosResultadosBusqueda.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QPlan.Views.PaginasBusqueda.PaginaEventosResultadosBusqueda"
              xmlns:local="clr-namespace:QPlan.ViewModels.PaginasBusqueda"
-             xmlns:model="clr-namespace:QPlan.Models">
+             xmlns:model="clr-namespace:QPlan.Models"
+             NavigationPage.HasNavigationBar="False">
     <RefreshView x:DataType="local:EventosResultadosBusquedaViewModel" Command="{Binding LoadEventosCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
         <CollectionView x:Name="EventosListView" ItemsSource="{Binding Eventos}" SelectionMode="None" Margin="20,20,0,0" HorizontalOptions="Center">
             <CollectionView.ItemTemplate>
