--- a/QPlan/QPlan/Views/PaginasFiltrar/PaginaFiltrar.xaml
+++ b/QPlan/QPlan/Views/PaginasFiltrar/PaginaFiltrar.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QPlan.Views.PaginasFiltrar.PaginaFiltrar"
-             Title="Filtrar">
+             Title="Filtrar"
+             xmlns:local="clr-namespace:QPlan.ViewModels">
     <ContentPage.Content>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -32,7 +33,8 @@
             </Grid.RowDefinitions>
             <Label Text="Categoría" Grid.Row="1" Grid.Column="1"></Label>
             <Label Text="Todas las categorias" Grid.Row="3" Grid.Column="1" TextColor="Black"></Label>
-            <ImageButton Source="chebron.png" Grid.Row="3" Grid.Column="1" HorizontalOptions="End" BackgroundColor="Transparent"></ImageButton>
+            <ImageButton Source="chebron.png" Grid.Row="3" Grid.Column="1" HorizontalOptions="End" BackgroundColor="Transparent"
+                         Command="{Binding Source={RelativeSource AncestorType={x:Type local:PaginaFiltrarViewModel}}, Path=OnCategoriaTapped}"></ImageButton>
             <Line BackgroundColor="Black" Grid.Row="4" Grid.Column="1"></Line>
             <Label Text="Distancia" Grid.Row="6" Grid.Column="1"></Label>
             <Label Text="Sin límite" x:Name="lblDistancia" Grid.Row="6" Grid.Column="1" HorizontalOptions="End" FontSize="12" ></Label>
@@ -48,7 +50,8 @@
             <Line BackgroundColor="black" Grid.Row="12" Grid.Column="1"></Line>
             <Label Text="Lugar" Grid.Row="14" Grid.Column="1"></Label>
             <Label Text="Todas las categorias" Grid.Row="15" Grid.Column="1" TextColor="Black"></Label>
-            <ImageButton Source="chebron.png" Grid.Row="15" Grid.Column="1" HorizontalOptions="End" BackgroundColor="Transparent"></ImageButton>
+            <ImageButton Source="chebron.png" Grid.Row="15" Grid.Column="1" HorizontalOptions="End" BackgroundColor="Transparent" 
+                         Command="{Binding Source={RelativeSource AncestorType={x:Type local:PaginaFiltrarViewModel}}, Path=OnLugarTapped}"></ImageButton>
             <Line BackgroundColor="Black" Grid.Row="16" Grid.Column="1"></Line>
             <Button Text="Aplicar filtros" Grid.Column="1" Grid.Row="18" BackgroundColor="Transparent" BorderColor="black" BorderWidth="1" CornerRadius="10"></Button>
         </Grid>
