--- a/QPlan/QPlan/Views/PaginasCuentaPublicar/PaginaMisEventos.xaml
+++ b/QPlan/QPlan/Views/PaginasCuentaPublicar/PaginaMisEventos.xaml
@@ -6,41 +6,49 @@
              xmlns:model="clr-namespace:QPlan.Models"
              Title="QPlan">
     <ContentPage.Content>
-        <RefreshView x:DataType="local:PaginaMisEventosViewModel" Command="{Binding LoadEventosCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}">
-            <CollectionView x:Name="EventosListView" ItemsSource="{Binding Eventos}" SelectionMode="None" Margin="20,20,0,0" HorizontalOptions="Center">
-                <CollectionView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid x:DataType="model:Evento" Margin="0,10,0,0">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="25"></RowDefinition>
-                                <RowDefinition Height="22"></RowDefinition>
-                                <RowDefinition Height="20"></RowDefinition>
-                                <RowDefinition Height="15"></RowDefinition>
-                                <RowDefinition Height="10"></RowDefinition>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="135"></ColumnDefinition>
-                                <ColumnDefinition Width="10"></ColumnDefinition>
-                                <ColumnDefinition Width="210"></ColumnDefinition>
-                            </Grid.ColumnDefinitions>
-                            <Frame Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="5" BorderColor="black" CornerRadius="10"></Frame>
-                            <Frame Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="1" Grid.RowSpan="5" BorderColor="black" CornerRadius="10"></Frame>
-                            <Image Source="{Binding foto}" Grid.Column="0" Grid.Row="0" Grid.RowSpan="5" Grid.ColumnSpan="1"></Image>
-                            <Label Text="{Binding nombre}" Grid.Column="2" Grid.Row="0" Margin="0,5,0,0" FontSize="18"></Label>
-                            <Label Text="Navarra Arena" Grid.Column="2" Grid.Row="1"></Label>
-                            <Label Text="{Binding Dia}" Grid.Column="2" Grid.Row="2"></Label>
-                            <Label Text="{Binding Hora}" Grid.Column="2" Grid.Row="3"></Label>
-                            <Grid.GestureRecognizers>
-                                <TapGestureRecognizer
+        <Grid x:DataType="local:PaginaMisEventosViewModel">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
+            <RefreshView Command="{Binding LoadEventosCommand}" IsRefreshing="{Binding IsBusy, Mode=TwoWay}" Grid.Row="0">
+                <CollectionView x:Name="EventosListView" ItemsSource="{Binding Eventos}" SelectionMode="None" Margin="20,20,0,0" HorizontalOptions="Center">
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid x:DataType="model:Evento" Margin="0,10,0,0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="25"></RowDefinition>
+                                    <RowDefinition Height="22"></RowDefinition>
+                                    <RowDefinition Height="20"></RowDefinition>
+                                    <RowDefinition Height="15"></RowDefinition>
+                                    <RowDefinition Height="10"></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="135"></ColumnDefinition>
+                                    <ColumnDefinition Width="10"></ColumnDefinition>
+                                    <ColumnDefinition Width="210"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <Frame Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="5" BorderColor="black" CornerRadius="10"></Frame>
+                                <Frame Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="1" Grid.RowSpan="5" BorderColor="black" CornerRadius="10"></Frame>
+                                <Image Source="{Binding foto}" Grid.Column="0" Grid.Row="0" Grid.RowSpan="5" Grid.ColumnSpan="1"></Image>
+                                <Label Text="{Binding nombre}" Grid.Column="2" Grid.Row="0" Margin="0,5,0,0" FontSize="18"></Label>
+                                <Label Text="Navarra Arena" Grid.Column="2" Grid.Row="1"></Label>
+                                <Label Text="{Binding Dia}" Grid.Column="2" Grid.Row="2"></Label>
+                                <Label Text="{Binding Hora}" Grid.Column="2" Grid.Row="3"></Label>
+                                <Grid.GestureRecognizers>
+                                    <TapGestureRecognizer
                                 NumberOfTapsRequired="1"
                                 Command="{Binding Source={RelativeSource AncestorType={x:Type local:PaginaMisEventosViewModel}}, Path=EventoTapped}"
                                 CommandParameter="{Binding .}">
-                                </TapGestureRecognizer>
-                            </Grid.GestureRecognizers>
-                        </Grid>
-                    </DataTemplate>
-                </CollectionView.ItemTemplate>
-            </CollectionView>
-        </RefreshView>
+                                    </TapGestureRecognizer>
+                                </Grid.GestureRecognizers>
+                            </Grid>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </RefreshView>
+            <Button Text="Nuevo evento" Grid.Row="0" BackgroundColor="white" BorderColor="black" BorderWidth="1" CornerRadius="10" HorizontalOptions="Center" VerticalOptions="End"
+                    WidthRequest="330" HeightRequest="40" Margin="0,0,0,10" Command="{Binding NuevoEventoTapped}"></Button>
+        </Grid>
+        
     </ContentPage.Content>
 </ContentPage>
