añadir pagina login y hacer cambios

--- a/QPlan/QPlan/Views/MainPageApp.xaml
+++ b/QPlan/QPlan/Views/MainPageApp.xaml
@@ -3,10 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="QPlan.Views.MainPageApp">
     <ContentPage.Content>
-        <StackLayout>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+            </Grid.RowDefinitions>
             <Image Source="logo_QPlan.png" HorizontalOptions="Center" VerticalOptions="Center"></Image>
-            <Label Text="from" HorizontalOptions="Center" VerticalOptions="End"></Label>
-            <Label Text="Diego Arbeloa" HorizontalOptions="Center" VerticalOptions="End"></Label>
-        </StackLayout>
+            <Label Text="from" HorizontalOptions="Center" VerticalOptions="End" Grid.Row="0" Margin="0,0,0,40"></Label>
+            <Label Text="Diego Arbeloa" HorizontalOptions="Center" VerticalOptions="End" Grid.Row="0" Margin="0,0,0,20"></Label>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
