--- a/QPlan/QPlan/Views/PaginasCuentaPublicar/PaginaMiEstablecimiento.xaml
+++ b/QPlan/QPlan/Views/PaginasCuentaPublicar/PaginaMiEstablecimiento.xaml
@@ -21,7 +21,7 @@
                 <Grid.ColumnDefinitions>
 
                 </Grid.ColumnDefinitions>
-                <Image Source="{Binding Foto}" Grid.Row="0"></Image>
+                <Image Source="{Binding Foto}" Grid.Row="0" Aspect="AspectFill"></Image>
                 <Frame Grid.Column="0" Grid.Row="1" CornerRadius="10" BorderColor="black"></Frame>
                 <Grid Grid.Row="1">
                     <Grid.RowDefinitions>
@@ -29,11 +29,11 @@
                         <RowDefinition Height="30"></RowDefinition>
                         <RowDefinition Height="25"></RowDefinition>
                         <RowDefinition Height="45"></RowDefinition>
+                        <RowDefinition Height="30"></RowDefinition>
                         <RowDefinition Height="150"></RowDefinition>
                         <RowDefinition Height="15"></RowDefinition>
                         <RowDefinition Height="15"></RowDefinition>
-                        <RowDefinition Height="15"></RowDefinition>
-                        <RowDefinition Height="40"></RowDefinition>
+                        <RowDefinition Height="30"></RowDefinition>
                         <RowDefinition Height="20"></RowDefinition>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
@@ -52,7 +52,7 @@
                     <Label x:Name="lblEstado" Text="Cerrado" TextColor="red" Grid.Row="2" Grid.Column="1"></Label>
                     <Label Text="{Binding Descripcion}" Grid.Row="3" Grid.Column="1" FontSize="14"></Label>
                     <Label Text="Horario:" Grid.Row="4" Grid.Column="1" FontSize="18"></Label>
-                    <Grid x:Name="grdHorario" Grid.Row="5" Grid.Column="1"></Grid>
+                    <Label Text="{Binding Horario}" Grid.Row="5" Grid.Column="1"></Label>
                     <Label Text="Edad mínima:" Grid.Row="6" Grid.Column="1"></Label>
                     <Label Text="{Binding EdadMinima}" Grid.Row="6" Grid.Column="1" Margin="100,0,0,0"></Label>
                     <Label Text="Precio entrada: " Grid.Row="7" Grid.Column="1"></Label>
