--- a/QPlan/QPlan/Views/PaginasCuentaPublicar/PaginaNuevoEvento.xaml
+++ b/QPlan/QPlan/Views/PaginasCuentaPublicar/PaginaNuevoEvento.xaml
@@ -4,6 +4,14 @@
              x:Class="QPlan.Views.PaginasCuentaPublicar.PaginaNuevoEvento"
              xmlns:local="clr-namespace:QPlan.ViewModels.PaginasCuentaPublicar"
              Title="Nuevo evento">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Vista detalles"
+                     Priority="0"
+                     Order="Secondary"></ToolbarItem>
+        <ToolbarItem Text="Vista reducida"
+                     Priority="1"
+                     Order="Secondary"></ToolbarItem>
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <ScrollView>
             <Grid>
@@ -102,7 +110,7 @@
                 </Grid>
                 <Label Text="Observaciones:" FontSize="18" Grid.Column="1" Grid.Row="18"></Label>
                 <Editor x:Name="edtObservaciones" Grid.Column="1" Grid.Row="19" IsSpellCheckEnabled="True" TextChanged="edtObservaciones_TextChanged"></Editor>
-                <Button x:Name="btnPrevisualizar" Text="Previsualizar evento" Grid.Row="21" Grid.Column="1" BackgroundColor="white" BorderColor="black" BorderWidth="1" CornerRadius="10" HorizontalOptions="Center" VerticalOptions="End"
+                <Button x:Name="btnPublicar" Text="Publicar evento" Grid.Row="21" Grid.Column="1" BackgroundColor="white" BorderColor="black" BorderWidth="1" CornerRadius="10" HorizontalOptions="Center" VerticalOptions="End"
                     WidthRequest="330" HeightRequest="40" Margin="0,0,0,10" Command="{Binding PrevisualizarEventoTapped}"></Button>
             </Grid>
         </ScrollView>
