--- a/QPlan/QPlan/Views/PaginaRegistroEstablecimiento.xaml
+++ b/QPlan/QPlan/Views/PaginaRegistroEstablecimiento.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="QPlan.Views.PaginasCuentaPublicar.PaginaModificarEstablecimiento">
+             x:Class="QPlan.Views.PaginaRegistroModificarEstablecimiento"
+             Title="Registrar establecimiento">
     <ContentPage.Content>
         <ScrollView>
             <Grid>
@@ -31,20 +32,20 @@
                     <ColumnDefinition Width="300"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <Label Text="Nombre:" Grid.Row="1" Grid.Column="1"></Label>
-                <Entry x:Name="entNombre" Grid.Row="2" Grid.Column="1"></Entry>
+                <Entry x:Name="entNombre" Grid.Row="2" Grid.Column="1" TextChanged="entNombre_TextChanged"></Entry>
                 <Label Text="Dirección:" Grid.Row="3" Grid.Column="1"></Label>
-                <Entry x:Name="entDireccion" Grid.Row="4" Grid.Column="1"></Entry>
+                <Entry x:Name="entDireccion" Grid.Row="4" Grid.Column="1" TextChanged="entDireccion_TextChanged"></Entry>
                 <Label Text="Horario:" Grid.Row="5" Grid.Column="1"></Label>
-                <Entry x:Name="entHorario" Grid.Row="6" Grid.Column="1"></Entry>
+                <Entry x:Name="entHorario" Grid.Row="6" Grid.Column="1" TextChanged="entHorario_TextChanged"></Entry>
                 <Label Text="Descripción:" Grid.Row="7" Grid.Column="1"></Label>
-                <Editor x:Name="edtDescripcion" Grid.Row="8" Grid.Column="1"></Editor>
+                <Editor x:Name="edtDescripcion" Grid.Row="8" Grid.Column="1" TextChanged="edtDescripcion_TextChanged"></Editor>
                 <Label Text="Teléfono:" Grid.Row="9" Grid.Column="1"></Label>
-                <Entry x:Name="entTelefono" Grid.Row="10" Grid.Column="1"></Entry>
+                <Entry x:Name="entTelefono" Grid.Row="10" Grid.Column="1" TextChanged="entTelefono_TextChanged"></Entry>
                 <Label Text="Edad mínima:" Grid.Row="11" Grid.Column="1" VerticalOptions="End"></Label>
                 <Label Text="Precio:" Grid.Row="11" Grid.Column="1" VerticalOptions="End" HorizontalOptions="Center" Margin="30,0,0,0"></Label>
-                <Entry x:Name="entEdad" Grid.Row="12" Grid.Column="1" HorizontalOptions="Start" WidthRequest="50"></Entry>
+                <Entry x:Name="entEdad" Grid.Row="12" Grid.Column="1" HorizontalOptions="Start" WidthRequest="50" TextChanged="entEdad_TextChanged"></Entry>
                 <Label Text="años" Grid.Row="12" Grid.Column="1" VerticalTextAlignment="End" HorizontalTextAlignment="Start" Margin="55,0,0,5" FontSize="10"></Label>
-                <Entry x:Name="entPrecio" Grid.Row="12" Grid.Column="1" HorizontalOptions="Center" WidthRequest="50" Margin="20,0,0,0"></Entry>
+                <Entry x:Name="entPrecio" Grid.Row="12" Grid.Column="1" HorizontalOptions="Center" WidthRequest="50" Margin="20,0,0,0" TextChanged="entPrecio_TextChanged"></Entry>
                 <Label Text="€" Grid.Row="12" Grid.Column="1" VerticalTextAlignment="End" HorizontalTextAlignment="Center" Margin="80,0,0,5" FontSize="10"></Label>
                 <Label Text="Foto" Grid.Row="13" Grid.Column="1"></Label>
                 <Button x:Name="btnFoto" Text="Seleccionar foto" Grid.Row="14" Grid.Column="1"></Button>
