--- a/QPlan/QPlan/Views/PaginasCuentaPublicar/PaginaCuentaPublicar.xaml
+++ b/QPlan/QPlan/Views/PaginasCuentaPublicar/PaginaCuentaPublicar.xaml
@@ -1,12 +1,33 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="QPlan.Views.PaginasCuentaPublicar.PaginaCuentaPublicar">
+             x:Class="QPlan.Views.PaginasCuentaPublicar.PaginaCuentaPublicar"
+             Title="{Binding Nombre}">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="20"></ColumnDefinition>
+                <ColumnDefinition Width="350"></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="20"></RowDefinition>
+                <RowDefinition Height="20"></RowDefinition>
+                <RowDefinition Height="20"></RowDefinition>
+                <RowDefinition Height="1"></RowDefinition>
+                <RowDefinition Height="20"></RowDefinition>
+                <RowDefinition Height="20"></RowDefinition>
+                <RowDefinition Height="1"></RowDefinition>
+                <RowDefinition Height="320"></RowDefinition>
+                <RowDefinition Height="40"></RowDefinition>
+            </Grid.RowDefinitions>
+            <Label Text="Email:" Grid.Row="1" Grid.Column="1"></Label>
+            <Label Text="{Binding Email}" Grid.Row="2" Grid.Column="1"></Label>
+            <Line BackgroundColor="Black" Grid.Row="3" Grid.Column="1"></Line>
+            <Label Text="Teléfono:" Grid.Row="4" Grid.Column="1"></Label>
+            <Label Text="{Binding Telefono}" Grid.Row="5" Grid.Column="1"></Label>
+            <Line BackgroundColor="Black" Grid.Row="6" Grid.Column="1"></Line>
+            <Button Text="Cerrar sesión" Grid.Row="8" Grid.Column="1" BackgroundColor="white" BorderColor="Red" BorderWidth="1" CornerRadius="10" HorizontalOptions="Center" VerticalOptions="End"
+                    WidthRequest="330" HeightRequest="40" Command="{Binding OnCerrarSesionTapped}"></Button>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
